fix overflow problem

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,7 +5,6 @@ main {
   padding: 2rem;
   margin: auto;
   max-width: 768px;
-  height: 100vh;
 }
 
 section {
@@ -16,15 +15,17 @@ section {
   box-shadow: 0 0 7px white;
   border-radius: 7px;
   padding: 2rem;
-  overflow-y: auto;
 }
 
 section::-webkit-scrollbar {
   display: none;
 }
 
-section:nth-child(2) {
-  flex: 4;
+section:nth-child(3) {
+  flex: 3;
+  min-height: 500px;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 section h1 {
@@ -72,7 +73,7 @@ section:first-child img {
 .chart-container {
   position: relative;
   margin: auto;
-  max-width: 400px;
+  max-width: 350px;
 }
 
 .description {
