--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,12 +19,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
   transition: ease-in-out 200ms;
-  max-height: 100vh;
 }
 
 a {
